# ML_PROJECTS

Crop and fertilizer Recomendation/: Crop_Prediction.ipynb  Fertilizer_recommendation.ipynb  app.py
Crop and fertilizer Recomendation/.streamlit/: config.toml
Crop and fertilizer Recomendation/model/: crop_model.sav  crop_scaler.sav  fertilizer_model.sav  fertilizer_scaler.sav
Helthcare-app/: app.py  knowledege_base.py  pyproject.toml  setup.py
Helthcare-app/HEALTHCARE_APP.egg-info/: PKG-INFO  SOURCES.txt
Helthcare-app/src/: functions.py  prompt.py
LINEAR_REGRESSION_FROM_SCRATCH/: main.ipynb
ML_real_state_prediction/: README.md  model.py  requirements.txt
Recommendation-app/: app.py  pyproject.toml  requirements.txt
Recommendation-app/hybrid_movie_recommender.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Recommendation-app/src/data/: load_data.py
Recommendation-app/src/models/: recommender.py
