[project]
name = "hybrid-movie-recommender"
version = "0.1.0"
description = "A hybrid movie recommendation system combining content-based and collaborative filtering approaches"
authors = [
    {name = "Pawan Parida", email = "13zero7two005@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]


[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "flake8>=4.0",
    "isort>=5.0",
    "mypy>=0.900",
    "jupyter>=1.0",
]

